# nofus

./: Cargo.toml  LICENSE  README.md  config.yml  example.config.yml
.github/: FUNDING.yml
misc/: nofus.service
src/: config.template.yml  main.rs
