[package]
name = "nofus"
version = "0.2.0"
edition = "2021"
authors = ["Hunter Horsman <kariudo@gmail.com>"]
description = "A daemon for monitoring and reacting to the status of NFS mounts."
license-file = "LICENSE"
repository = "https://github.com/kariudo/nofus"
homepage = "https://github.com/kariudo/nofus"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inotify = "0.11"
proc-mounts = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"
log = "0.4"
env_logger = "0.11.6"
